aligned correctly

--- a/output.css
+++ b/output.css
@@ -184,20 +184,86 @@
   .m-auto {
     margin: auto;
   }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
+  }
+  .mt-0\.5 {
+    margin-top: calc(var(--spacing) * 0.5);
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
+  }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
+  .mt-13 {
+    margin-top: calc(var(--spacing) * 13);
+  }
+  .mt-15 {
+    margin-top: calc(var(--spacing) * 15);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
   }
   .mt-24 {
     margin-top: calc(var(--spacing) * 24);
   }
+  .mt-30 {
+    margin-top: calc(var(--spacing) * 30);
+  }
+  .mt-40 {
+    margin-top: calc(var(--spacing) * 40);
+  }
+  .mt-50 {
+    margin-top: calc(var(--spacing) * 50);
+  }
   .mt-60 {
     margin-top: calc(var(--spacing) * 60);
+  }
+  .mt-70 {
+    margin-top: calc(var(--spacing) * 70);
+  }
+  .mt-300 {
+    margin-top: calc(var(--spacing) * 300);
+  }
+  .mt-\[40\] {
+    margin-top: 40;
+  }
+  .mt-\[40em\] {
+    margin-top: 40em;
+  }
+  .mt-\[40vh\] {
+    margin-top: 40vh;
   }
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
   }
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
+  }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
+  }
+  .mb-13 {
+    margin-bottom: calc(var(--spacing) * 13);
+  }
+  .mb-15 {
+    margin-bottom: calc(var(--spacing) * 15);
+  }
+  .mb-20 {
+    margin-bottom: calc(var(--spacing) * 20);
+  }
+  .mb-40 {
+    margin-bottom: calc(var(--spacing) * 40);
+  }
+  .mb-\[-10\] {
+    margin-bottom: -10;
+  }
+  .mb-\[-\] {
+    margin-bottom: -;
   }
   .flex {
     display: flex;
@@ -214,8 +280,14 @@
   .h-7 {
     height: calc(var(--spacing) * 7);
   }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
+  }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
   }
   .h-\[50vh\] {
     height: 50vh;
@@ -223,11 +295,17 @@
   .w-7 {
     width: calc(var(--spacing) * 7);
   }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
+  .max-w-\[0vw\] {
+    max-width: 0vw;
+  }
+  .max-w-\[65vw\] {
+    max-width: 65vw;
   }
   .max-w-\[70vw\] {
     max-width: 70vw;
+  }
+  .max-w-\[650vw\] {
+    max-width: 650vw;
   }
   .flex-grow {
     flex-grow: 1;
@@ -268,6 +346,21 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
+  }
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
+  .pt-30 {
+    padding-top: calc(var(--spacing) * 30);
+  }
+  .pt-40 {
+    padding-top: calc(var(--spacing) * 40);
+  }
+  .pt-60 {
+    padding-top: calc(var(--spacing) * 60);
   }
   .text-center {
     text-align: center;
@@ -328,15 +421,72 @@
       max-width: 60vw;
     }
   }
+  .sm\:text-4xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
   .sm\:text-5xl {
     @media (width >= 40rem) {
       font-size: var(--text-5xl);
       line-height: var(--tw-leading, var(--text-5xl--line-height));
     }
   }
+  .sm\:text-xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .md\:max-w-\[3vw\] {
+    @media (width >= 48rem) {
+      max-width: 3vw;
+    }
+  }
+  .md\:max-w-\[4vw\] {
+    @media (width >= 48rem) {
+      max-width: 4vw;
+    }
+  }
+  .md\:max-w-\[20vw\] {
+    @media (width >= 48rem) {
+      max-width: 20vw;
+    }
+  }
+  .md\:max-w-\[25vw\] {
+    @media (width >= 48rem) {
+      max-width: 25vw;
+    }
+  }
+  .md\:max-w-\[30vw\] {
+    @media (width >= 48rem) {
+      max-width: 30vw;
+    }
+  }
+  .md\:max-w-\[35vw\] {
+    @media (width >= 48rem) {
+      max-width: 35vw;
+    }
+  }
   .md\:max-w-\[40vw\] {
     @media (width >= 48rem) {
       max-width: 40vw;
+    }
+  }
+  .md\:max-w-\[45vw\] {
+    @media (width >= 48rem) {
+      max-width: 45vw;
+    }
+  }
+  .md\:max-w-\[50vw\] {
+    @media (width >= 48rem) {
+      max-width: 50vw;
+    }
+  }
+  .md\:max-w-\[vw\] {
+    @media (width >= 48rem) {
+      max-width: vw;
     }
   }
   .md\:text-2xl {
@@ -345,10 +495,22 @@
       line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
+  .md\:text-5xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
   .md\:text-6xl {
     @media (width >= 48rem) {
       font-size: var(--text-6xl);
       line-height: var(--tw-leading, var(--text-6xl--line-height));
+    }
+  }
+  .md\:text-xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
 }
